--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,11 +1,11 @@
 steps:
   - name: gcr.io/cloud-builders/docker
-    args:
-      - build
-      - '--no-cache'
-      - '-t'
-      - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
-      - '.'
+    args: [ "build",
+            '--no-cache',
+            '-t',
+            "'${_GCR_REGION}/${_GCR_PROJECT}/${_GCR_IMAGE_NAME}:${_GCR_TAG}'",
+            '.',
+      ]
     id: Build
   - name: gcr.io/cloud-builders/docker
     args:
