--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -10,18 +10,18 @@ steps:
   - name: gcr.io/cloud-builders/docker
     args:
       - push
-      - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+      - '${LOCATION}-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}:${COMMIT_SHA}'
     id: Push
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     args:
       - run
       - deploy
-      - $_SERVICE_NAME
+      - ${_SERVICE_NAME}
       - '--platform=managed'
-      - '--image=$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
-      - '--region=$_DEPLOY_REGION'
+      - '${LOCATION}-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}:${COMMIT_SHA}'
+      - '--region=${LOCATION}'
       - '--allow-unauthenticated'
     id: Deploy
     entrypoint: gcloud
 images:
-  - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+  - '${LOCATION}-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}:${COMMIT_SHA}'
