--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -8,6 +8,10 @@ steps:
             '.',
       ]
     id: Build
+  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+    args: ["auth","configure-docker","${_IMAGE_NAME}:$COMMIT_SHA"]
+    id: Auth
+    
   - name: gcr.io/cloud-builders/docker
     args:
       - push
