--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,17 +1,17 @@
 steps:
+  - name: "gcr.io/cloud-builders/docker"
+    entrypoint: "bash"
+    args: ["-c","docker pull ${_IMAGE_NAME}:$COMMIT_SHA || exit 0"]
 
   - name: gcr.io/cloud-builders/docker
     args: [ "build",
-            '--no-cache',
+            '--cache-from', "${_IMAGE_NAME}:$COMMIT_SHA",
             '-t',
             '${_IMAGE_NAME}:$COMMIT_SHA',
             '.',
       ]
     id: Build
-  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
-    args: ["auth","configure-docker","${_IMAGE_NAME}:$COMMIT_SHA"]
-    id: Auth
-    
+
   - name: gcr.io/cloud-builders/docker
     args:
       - push
