--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,13 +1,13 @@
 steps:
   - name: "gcr.io/cloud-builders/docker"
     entrypoint: "bash"
-    args: ["-c","docker pull us-central1-docker.pkg.dev/${PROJECT_ID}/tuto/image || exit 0"]
+    args: ["-c","docker pull us-central1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/image || exit 0"]
 
   - name: gcr.io/cloud-builders/docker
     args: [ "build",
-            '--cache-from', "us-central1-docker.pkg.dev/${PROJECT_ID}/tuto/image",
+            '--cache-from', "us-central1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/image",
             '-t',
-            'us-central1-docker.pkg.dev/${PROJECT_ID}/tuto/image',
+            'us-central1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/image',
             '.',
       ]
     id: Build
@@ -15,7 +15,7 @@ steps:
   - name: gcr.io/cloud-builders/docker
     args:
       - push
-      - 'us-central1-docker.pkg.dev/${PROJECT_ID}/tuto/image'
+      - 'us-central1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/image'
     id: Push
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     args:
@@ -23,7 +23,7 @@ steps:
       - deploy
       - ${_SERVICE_NAME}
       - '--platform=managed'
-      - 'us-central1-docker.pkg.dev/${PROJECT_ID}/tuto/image'
+      - 'us-central1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/image'
       - '--region=${LOCATION}'
       - '--allow-unauthenticated'
     id: Deploy
@@ -34,4 +34,4 @@ substitutions:
   _SERVICE_NAME: ${_SERVICE_NAME}
   _REGION: ${_REGION}
 images:
-  - 'us-central1-docker.pkg.dev/${PROJECT_ID}/tuto/image'
+  - 'us-central1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/image'
