--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -23,7 +23,7 @@ steps:
       - deploy
       - ${_SERVICE_NAME}
       - '--platform=managed'
-      - "--image",
+      - "--image"
       - 'us-central1-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/image'
       - '--region=${LOCATION}'
       - '--allow-unauthenticated'
